# text-literal-plugin

./: .envrc  LICENSE  README.md  flake.nix  segfault-repro.cabal  text-literal-plugin.cabal  text-literals-plugin.cabal
app/: Demo.hs
examples/: Demo.hs  Repro.hs
plugin/: DoNothing.hs
plugin/Data/Text/Literal/: Plugin.hs  Shims.hs
tests/: Test.hs
tests/Tests/: Sanity.hs
