cabal-version:      1.18
name:               segfault-repro
version:            0.1.0.0
description:        Please see the README on Github at <https://github.com/avnik/segfault-repro#readme>
homepage:           https://github.com/avnik/segfault-repro#readme
bug-reports:        https://github.com/avnik/segfault-repro/issues
author:             Alexander V. Nikolaev
maintainer:         avn@avnik.info
copyright:          2022 Alexander V. Nikolaev
license:            BSD-3-Clause
build-type:         Simple

library
    default-language:   Haskell2010
    hs-source-dirs:
        plugin
    build-depends:
        base >= 4.8 && < 5,
        ghc >=8.6 && <9.3
    exposed-modules:
        DoNothing 

executable demo 
    default-language:   Haskell2010
    hs-source-dirs:     app 
    main-is:            Demo.hs 
    build-depends:
        base >= 4.8 && < 5,
        segfault-repro

